stylesheets/style.css
@import url("https://fonts.googleapis.com/css2?family=Mynerve&family=Raleway:wght@400;700&display=swap");

:root {
  --primary-font: "Raleway", sans-serif;
  --secondary-font: "Mynerve", cursive;

  --orange: hsla(26, 89%, 62%, 0.649);
  --gray: rgb(204, 203, 203);
  --black: #000000;
  --white: #ffffff;
}

body {
  font-size: 18px;
  font-family: var(--primary-font);
  font-weight: 400;
}

h4 {
  font-weight: 400;
  margin-top: 20px;
}

a {
  text-decoration: none;
  color: inherit;
}
ul > a {
  list-style-type: none;
}

a:hover,
a:focus,
.cv-info-box-dropdown-header:hover,
.cv-info-box-dropdown-header:active {
  cursor: pointer;
  text-shadow: 0 0 20px var(--black);
}

.sr-only {
  display: none;
}

.introduction-profil-picture-section,
.projects-section,
.cv-section,
.skills-section {
  padding: 50px;
}

.projects-header,
.cv-header,
.skills-header {
  margin-left: 50px;
  font-weight: 700;
}

.black-github-logo,
.contact-link-logo,
.github-logo,
.frontend-mentor-logo,
.email-logo,
.mobile-logo {
  vertical-align: middle;
}

/* Header */
nav {
  position: fixed;
  width: 100%;
  color: var(--white);
  background-color: rgba(74, 55, 35, 0.551);
  z-index: 1;
}
.navbar-list {
  display: flex;
  justify-content: space-evenly;
  list-style-type: none;
}

/* introduction */

.introduction-profil-picture-section {
  display: grid;
  background-color: var(--orange);
  gap: 20px;
  padding-top: 100px;
}

.introduction-container {
  position: relative;
  width: fit-content;
  height: fit-content;
  grid-column: 1;
  grid-row: 1;
  margin: auto;
}
.introduction-background-image {
  width: 500px;
  height: auto;
}
.introduction-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-weight: 700;
  line-height: 2;
  font-size: 20px;
}

.contact-links {
  grid-column: 1;
  grid-row: 2;
  margin: auto;
  line-height: 1.5;
}

.profile-picture-container {
  position: relative;
  width: fit-content;
  grid-column: 2;
  grid-row: 1 / span 2;
  justify-self: end;
  margin-right: 90px;
}
.profile-picture-background-image {
  width: 400px;
  height: auto;
}

.profile-picture {
  width: 300px;
  height: auto;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) rotate(5deg);
}

/* projects */

.projects-paragraph {
  margin-left: 50px;
}

.projects-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  row-gap: 20px;
}

.project-container {
  padding: 20px;
  box-shadow: 0 0 10px var(--black);
  min-width: 45%;
  max-width: 450px;
}
.project-container:hover,
.project-container:active {
  box-shadow: 0 0 20px var(--black);
  cursor: pointer;
}

.project-container > h3 {
  text-align: center;
  max-width: 600px;
}

.project-container > img {
  width: 100%;
  height: auto;
}

/* CV */

.cv-section {
  background-color: var(--gray);
  height: 800px;
}
.road-image {
  display: block;
  height: 900px;
  width: 700px;
  margin: -126px auto 0 450px;
}

.graduation-article {
  position: absolute;
  margin: -900px 0 0 800px;
}
.university-article {
  position: absolute;
  margin-top: -750px;
}

.job-article {
  position: absolute;
  margin: -440px 0 0 900px;
}
.specialization-article {
  position: absolute;
  margin-top: -300px;
}
.specialization-article li {
  margin-top: 20px;
}

.semster-project-info-box,
.practicle-semester-info-box,
.thesis-info-box {
  display: none;
}
.displayed {
  display: block;
}

/* Skills and Interests */

.skills-section {
  background-color: var(--orange);
}

.skills-container {
  position: relative;
  display: flex;
  justify-content: space-around;
  font-family: var(--secondary-font);
}

.skills-background-image-1 {
  height: 640px;
  width: auto;
}
.skills-background-image-2 {
  height: 640px;
  width: auto;
}

.skill-headers {
  text-decoration: underline;
}

.skills-part-1,
.skills-part-2 {
  position: absolute;
  transform: translate(-50%, -50%);
  line-height: 2.3;
}

.skills-part-1 {
  width: 280px;
  top: 40%;
  left: 24%;
}
.skills-part-2 {
  width: 290px;
  top: 40%;
  left: 77%;
}

.dark-dot,
.white-dot {
  height: 15px;
  width: 15px;
  border-radius: 50%;
  display: inline-block;
  margin-right: 2px;
  border: 1px solid var(--black);
}
.dark-dot {
  background-color: var(--black);
}
.white-dot {
  background-color: var(--white);
}

/* jump to start */
.jump-to-start-section {
  background-color: var(--orange);
  padding-bottom: 10px;
}

.jump-to-start-button {
  border: 3px solid black;
  cursor: pointer;
  border-radius: 50%;
  background-color: transparent;
  padding: 5px;
  margin: 0 auto;
  display: block;
}

/* Footer */
footer {
  display: flex;
  gap: 10px;
  height: 100px;
  line-height: 2;
  display: flex;
  justify-content: space-evenly;
  margin-top: 10px;
}

.github-frontend-mentor-section {
  display: flex;
  flex-direction: column;
}
.email-mobil-section {
  display: flex;
  flex-direction: column;
}

.github-logo,
.frontend-mentor-logo,
.email-logo,
.mobile-logo {
  width: auto;
  padding-right: 5px;
}
.github-logo {
  height: 27px;
}
.frontend-mentor-logo {
  height: 25px;
}
.email-logo {
  height: 25px;
}
.mobile-logo {
  height: 25px;
}

